--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ img {
 h1 {
   font-weight: 700;
   color: var(--text);
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   text-align: center;
+  padding: 15px 0;
 }
 
 p {
@@ -45,4 +46,5 @@ p {
   font-size: 16px;
   text-align: center;
   font-weight: 400;
+  opacity: 0.6;
 }
